--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-  <img src="https://images.unsplash.com/photo-1465188162913-8fb5709d6d57" width="500" />
-  <h1>This is a simple title created within HTML.</h1>
+  <img src="https://images.unsplash.com/photo-1465188162913-8fb5709d6d57" width="1000" />
+  <h1>PROVES AZURE AMB GITHUB</h1>
   <p>Prova de visualitzacio despres de modificar codi a GitHub.</p>
 
   <p>Image Source: <a href="http://www.unsplash.com" target="_blank">Unsplash</a></p>
